# japan-stagnation-decomposition

./: .gitignore  CITATION.cff  LICENSE  README.md  REPLICATION.md  abstract_en.md  build_pdf.py  pandoc-header.tex  paper_en.md  paper_en_v2.md  paper_ja.md  paper_ja_v2.md  pyproject.toml
src/collectors/: g7_external_collector.py  g7_hours_collector.py  g7_wage_collector.py  japan_external_collector.py  oecd_household_collector.py  oecd_stan_collector.py  pwt_collector.py  wdi_collector.py  wdi_labor_collector.py  wdi_sector_collector.py  wdi_services_collector.py
src/macro/japan_stagnation/: __init__.py  composition_effect.py  counterfactual.py  cross_country_svar.py  digital_deficit.py  dsge_light.py  formal_model.py  formal_model_extended.py  gravity_monadic.py  growth_accounting.py  hank_dsge_full.py  hank_light.py  household_cross_country.py  korea_oaxaca.py  labor_share.py  nisa_did.py  nisa_did_stacked.py  nordic_comparison.py  oaxaca_blinder.py  panel_regression.py  pwt_collector_helper.py  robustness.py  robustness_hac.py  robustness_model_fit.py  robustness_model_sensitivity.py  robustness_subsample.py  sector_productivity.py  services_subsector.py  stylized_facts.py  svar_household.py  svar_robustness.py  synthetic_control.py  synthetic_control_permutation.py  wage_mediator.py  wage_stagnation.py  wage_transmission.py
